<resources>
    <string name="strPassword">Password</string>
    <string name="dobTitle">Date Of Birth</string>
    <string name="goTitle">Go</string>
    <string name="groupPolicyServicingTitle">Policy Servicing</string>
    <string name="groupNewBusinessTitle">New Business</string>
    <string name="groupClaimsTitle">Claims</string>
    <string name="hello">Hello World, POS_BancaAgencyActivity!</string>
    <string name="app_name">Smart Advisor</string>
    <string name="tab_0">DashBoard</string>
    <string name="tab_1">Planner</string>
    <string name="tab_2">Products</string>
    <string name="tab_3">Premium Calculator</string>
    <string name="tab_4">Reports</string>
    <string name="tab_5">T-Shiksha</string>
    <string name="tab_6">Help</string>
    <string name="tab_7">Links</string>
    <string name="hint_search">Search</string>
    <string name="Reset">Reset</string>
    <string name="tab_8">BDM Tracker</string>
    <string name="policy_no">* Policy Number</string>
    <string name="dob">* DOB</string>
    <string name="album_name">CameraSample</string>
    <string name="cannot">Cannot</string>
    <string name="micr_code">* MICR Code</string>
    <string name="bank_name">* Bank Name</string>
    <string name="branch_name">* Branch Name</string>
    <string name="mobile_no">* Mobile Number</string>
    <string name="policy_no_without_asterisk">Policy Number</string>
    <string name="proposal_no_without_asterisk">Proposal Number</string>
    <string name="micr_code_without_asterisk">MICR Code</string>
    <string name="bank_name_without_asterisk">Bank Name</string>
    <string name="branch_name_without_asterisk">Branch Name</string>
    <string name="cheque_amount_wihout_asterisk">Cheque Amount</string>
    <string name="pay_mode_without_asterisk">Pay Mode</string>
    <string name="pay_type_without_asterisk">Check Type</string>
    <string name="payment_type_without_asterisk">Payment Type</string>
    <string name="initial">Initial</string>
    <string name="customer_name">* Customer Name</string>
    <string name="ia_code">IA Code</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_no1">Mobile No</string>
    <string name="complaint_category">Complaint Category</string>
    <string name="complaint_details">Complaint Details</string>
    <string name="complaint_status">Complaint Status</string>
    <string name="proposal_no">* Proposal Number</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="view">View</string>
    <string name="amount">Amount</string>
    <string name="due_date">Due Date</string>
    <string name="alt_mob_no">* Alternative Mobile No.</string>
    <string name="account_no">* Account Number</string>
    <string name="submit">SUBMIT</string>
    <string name="upload">UPLOAD</string>
    <string name="sync">SYNC</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="hint_policy_no">Enter Policy Number</string>
    <string name="hint_dob">Enter DOB (dd/mm/yyyy)</string>
    <string name="hint_micr_code">Enter MICR code</string>
    <string name="hint_bank_name">Enter Bank Name and Click on Search</string>
    <string name="hint_branch_name">Enter Branch Name</string>
    <string name="hint_mobile_no">Enter Mobile Number</string>
    <string name="hint_altr_mobile_no">Enter Alternate Mobile Number</string>
    <string name="hint_customer_name">Enter Customer Name</string>
    <string name="hint_proposal_no">Enter Proposal Number</string>
    <string name="hint_cheque_no">Enter Cheque/Draft Number</string>
    <string name="hint_cheque_date">Enter Cheque/Draft Date (dd/mm/yyyy)</string>
    <string name="hint_cheque_amount">Enter Cheque/Draft Amount</string>
    <string name="hint_account_no">Enter Account Number</string>
    <string name="cheque_no">* Cheque/Draft Number</string>
    <string name="cheque_date">* Cheque/Draft Date</string>
    <string name="cheque_amount">* Cheque/Draft Amount</string>
    <string name="pay_mode">* Pay Mode</string>
    <string name="pay_type">* Check/Draft Type</string>
    <string name="payment_type">* Payment Type</string>
    <string name="Policy_Term">Choose a Policy Term</string>
    <string name="age">Select your age</string>
    <string name="Policy_Sum">Choose a Sum Assured</string>
    <string name="Plan_options">Choose a Premium Freq</string>
    <string name="Premium_Freq">Choose a Premium Freq</string>
    <string name="strMutualFund">Mutual Fund</string>
    <string name="strPostOfficePlans">Post office plans</string>
    <string name="strHealthInsurance">Health Insurance</string>
    <string name="strGeneralInsurance">General Insurance</string>
    <string name="strNO">No</string>
    <string name="strProductTraining">Given the product training</string>
    <string name="strNeedAnalysis">Explained how to do need analysis</string>
    <string name="strHandedDetails">Handed over product fliers/forms/contest details etc</string>
    <string name="strCommissionStructure">Explained commission structure</string>
    <string name="strUsage">Usage of Digital assets like mConnect &amp; Smart Advisor</string>
    <string name="strProposalStatusEnq">Proposal status enquiry</string>
    <string name="strRenewalDueList">Renewal due list</string>
    <string name="strProductDetails">Product details</string>
    <string name="strPremiumCalc">Premium calculator</string>
    <string name="strMISMTDYTD">MIS about MTD and YTD Business</string>
    <string name="strSBINEws">News and updates on SBI Life</string>
    <string name="tvOptionOne">1. How long have you been associated with SBI Life as an LM?</string>
    <string name="tvOptionTwo">2. Kindly let us know about your educational details?</string>
    <string name="tvOptionThree">3. Kindly let us know whether you work with SBI Life for?(</string>
    <string name="tvOptionFour">4. If the answer to above question is “part time” what is your main occupation</string>
    <string name="tvOptionFive">5. Are you selling any other financial products given below apart from SBI Life insurance products? </string>
    <string name="tvOptionSix">6. In brief kindly describe your on boarding experience (applicable for LM who have joined less than a year back)</string>
    <string name="tvOptionSeven">7.	How many products of SBI Life are you aware of ? </string>
    <string name="tvOptionEight">8.	How many products of SBI Life do you sell ?</string>
    <string name="tvOptionNine">9.	How many customers do you meet in a week?</string>
    <string name="tvOptionTen">10.	How many days of training have you attended in the past 1 year?</string>
    <string name="tvOptionEleven">11. What according to you are the biggest strengths of SBI Life from customer point of view? Rank in the order of importance, 1 being most important and 4 being least important.</string>
    <string name="tvOptionElevenSub">Drag &amp; arrange as per order of preference.</string>
    <string name="tvOptionTwelve">12. What do you find attractive as a LM, from career point of view in SBI Life ? Rank in the order of importance, 1 being most important and 5 being least important.</string>
    <string name="tvOptionThirteen">13.	 What training interventions do you feel are required by you to increase your productivity, let’s say in the coming 6 months? Rank in the order of importance, 1 being most important and 5 being least important.</string>
    <string name="tvOptionFourteen">14.	Select the features you are aware about in Smart Advisor Application. Select more than one if applicable</string>
    <string name="tvOptionFifteen">15.	What new features would you like to be added in Smart advisor application? </string>
    <string name="tvOptionsixteen">16.	Are you given support through leads allotment by your branch ? </string>
    <string name="textViewSatisfactionScale">17. On a scale of 1-5 how satisfied are you with branch infrastructure and support provided at branch level, with 1 being extremely poor and 5 being extremely good? </string>
    <string name="textviewBranchRating">18.	 If rating is between 1-3 for above question then what do you feel could be done better ?</string>
    <string name="tvOptionNineteen">19. Select the benefits of club membership program of SBI Life that you are aware of? Select more than one if applicable</string>
    <string name="tvOptionTwenty">20. Do you get the commission &amp; incentives in Time?</string>
    <string name="tvOptionTwentyOne">21. Are you aware of the SQS policy for the LM of SBI Life ?</string>
    <string name="tvOptionTwentyTwo">22. Are you aware of “PaisaGenie” Financial planning application exclusive for SBI Life customers and asking customers to download the same?</string>
    <string name="tvOptionTwentyThree">23. What according to you should SBI Life do to increase the income &amp; productivity of its LM ? </string>
    <string name="tvOptionTwentyFour">24.	What steps should SBI Life take to increase brand loyalty among the customers? </string>
    <string name="strLanguageChooseOption">Please select your Language</string>
    <string name="strOneTimeDirectCredit">Onetime direct credit</string>
    <string name="strLifeINsurancePersonalAccCover">Life insurance and personal accident cover</string>
    <string name="strGroupMedicalCover">Group medical cover</string>
    <string name="strOppParConv">Opportunity to participate in a convention</string>
    <string name="strVisitCard">Visiting cards &amp; stationary</string>
    <string name="strMaintAllowances">Monthly maintenance allowance &amp; telephone allowance for selected club members</string>
    <string name="unit_linked_plan_code">ULIP</string>
    <string name="saving_plan_code">SP</string>
    <string name="product_category_tradition">TRADITION</string>
    <string name="product_category_ulip">ULIP</string>
    <string name="sbi_life_smart_wealth_builder_code">1K</string>
    <string name="sbi_life_flexi_smart_plus_code">1M</string>
    <string name="sbi_life_shubh_nivesh_code">35</string>
    <string name="sbi_life_smart_elite_code">53</string>
    <string name="sbi_life_smart_champ_insurance_code">1P</string>
    <string name="sbi_life_smart_guaranteed_saving_plan_code">1X</string>
    <string name="sbi_life_saral_swadhan_plus_code">1J</string>
    <string name="sbi_life_smart_shield_code">45</string>
    <string name="sbi_life_smart_scholar_code">51</string>
    <string name="sbi_life_smart_money_back_gold_code">1N</string>
    <string name="sbi_life_Retire_smart_code">1H</string>
    <string name="sbi_life_saral_shield_code">47</string>
    <string name="sbi_life_smart_income_protect_code">1B</string>
    <string name="sbi_life_smart_money_planner_code">1R</string>
    <string name="sbi_life_saral_maha_anand_code">50</string>
    <string name="sbi_life_smart_wealth_assure_code">55</string>
    <string name="sbi_life_saral_pension_code">1E</string>
    <string name="sbi_life_smart_power_insurance_code">1C</string>
    <string name="sbi_life_annuity_plus_code">22</string>
    <string name="sbi_life_smart_humsafar_code">1W</string>
    <string name="sbi_life_rinn_raksha_code">70</string>
    <string name="sbi_life_smart_swadhan_plus_code">1Z</string>
    <string name="sbi_life_smart_women_advantage_code">2C</string>
    <string name="sbi_life_smart_bachat_code">2D</string>
    <string name="sbi_life_smart_privilege_code">2B</string>
    <string name="sbi_life_poorn_suraksha_code">2F</string>
    <string name="sbi_life_sampoorn_cancer_suraksha_code">2E</string>
    <string name="sbi_life_smart_wealth_builder">Smart Wealth Builder</string>
    <string name="sbi_life_smart_elite">Smart Elite</string>
    <string name="sbi_life_shubh_nivesh">Shubh Nivesh</string>
    <string name="sbi_life_flexi_smart_plus">Flexi Smart Plus</string>
</resources>